--- a/projeto/package.json
+++ b/projeto/package.json
@@ -12,9 +12,9 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "autoprefixer": "10.4.5",
+        "axios": "^1.6.2",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.0.18"
