--- a/projeto/.env.example
+++ b/projeto/.env.example
@@ -51,5 +51,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=secret
+GOOGLE_CLIENT_SECRET=secret
+
+NOCAPTCHA_SECRET=secret
+NOCAPTCHA_SITEKEY=secret
