--- a/projeto/.env.example
+++ b/projeto/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -51,5 +51,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=secret
+GOOGLE_CLIENT_SECRET=secret
+
+NOCAPTCHA_SECRET=secret
+NOCAPTCHA_SITEKEY=secret
